--- a/src/app/template-forms/template-form.component.html
+++ b/src/app/template-forms/template-form.component.html
@@ -12,39 +12,56 @@
     <!-- Title of the form -->
     <div class="title">Registration Form</div>
     <hr>
-    <div class="content">
+    <div class="content" >
       <!-- Registration form -->
       <form action="#" (ngSubmit)="onFormSubmit(registrationForm)" #registrationForm="ngForm">
         <div class="user-details">
           <!-- Input box for full name -->
           <div class="input-box">
-            <span class="details">Full Name</span>
-            <input type="text" placeholder="Enter your name" name="fullName" ngModel>
+            <span class="details">Full Name   </span>
+            <input type="text" placeholder="Enter your name" name="fullName" [(ngModel)]="name" required #fullName="ngModel">
+            <div>
+              <small *ngIf="registrationForm.controls['fullName'].errors?.['required']">*Enter full name</small>
+            </div>
+            <span>{{name}}</span>
           </div>
           <!-- Input box for username -->
           <div class="input-box">
-            <span class="details">Username</span>
-            <input type="text" placeholder="Enter your username" name="userName" ngModel>
+            <span class="details">Username    </span>
+            <input type="text" placeholder="Enter your username" name="username" [(ngModel)]="uname" required #username="ngModel">
+            <div>
+              <small *ngIf="username.touched && username.invalid" class="red text">*Enter user name</small>
+            </div>
+            <span>{{uname}}</span>
+
           </div>
           <!-- Input box for email -->
           <div class="input-box">
-            <span class="details">Email</span>
-            <input type="text" placeholder="Enter your email" name="email" ngModel>
+            <span class="details">Email   </span>
+            <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="emailAddr" required #email="ngModel">
+            <div>
+              <small *ngIf="email.touched && email.invalid" class="red text">*Enter email</small>
+            </div>
+            <span>{{emailAddr}}</span>
+
           </div>
           <!-- Input box for password -->
           <div class="input-box">
-            <span class="details">Password</span>
-            <input type="text" placeholder="Enter your password" name="pswd" ngModel>
+            <span class="details">Password   </span>
+            <input type="text" placeholder="Enter your password" name="pswd" [(ngModel)]="password" required #pswd="ngModel">
+            <div>
+              <small *ngIf="pswd.touched && pswd.invalid" class="red text">*Enter password</small>
+            </div>
           </div>
           <!-- Input box for confirming password -->
           <div class="input-box">
-            <span class="details">Confirm Password</span>
+            <span class="details">Confirm Password   </span>
             <input type="text" placeholder="Confirm your password" name="confirmpswd" ngModel>
           </div>
           <!-- Input box for date of birth -->
           <div class="input-box">
-            <span class="details">Date of birth</span>
-            <input type="date" name="dob" name="dob" ngModel>
+            <span class="details">Date of birth   </span>
+            <input type="date" name="dob" name="dob" ngModel required>
           </div>
         </div>
         <!-- Button container -->
