angular reactive-forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<template-form></template-form>
+<!-- <template-form></template-form> -->
 <router-outlet></router-outlet>
+<reactive-forms></reactive-forms>
