--- a/src/app/reactive-forms/reactive-forms.component.html
+++ b/src/app/reactive-forms/reactive-forms.component.html
@@ -14,54 +14,51 @@
     <hr>
     <div class="content" >
       <!-- Registration form -->
-      <form action="#" (ngSubmit)="onFormSubmit(registrationForm)" #registrationForm="ngForm">
+      <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
         <div class="user-details">
           <!-- Input box for full name -->
           <div class="input-box">
             <span class="details">Full Name   </span>
-            <input type="text" placeholder="Enter your name" name="name" required [(ngModel)]="user.name" #name="ngModel">
+            <input type="text" placeholder="Enter your name" formControlName="name">
             <div>
-              <small *ngIf="name.touched && name.invalid" class="red text">*Enter full name</small>
+              <small >*Enter full name</small>
             </div>
-            <span>{{name}}</span>
           </div>
           <!-- Input box for username -->
           <div class="input-box">
             <span class="details">Username    </span>
-            <input type="text" placeholder="Enter your username" name="username" [(ngModel)]="user.email" required #username="ngModel">
+            <input type="text" placeholder="Enter your username" formControlName="username">
             <div>
-              <small *ngIf="username.touched && username.invalid" class="red text">*Enter user name</small>
+              <small  class="red text">*Enter user name</small>
             </div>
-            <span>{{username}}</span>
 
           </div>
           <!-- Input box for email -->
           <div class="input-box">
             <span class="details">Email   </span>
-            <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="user.email" required #email="ngModel">
+            <input type="text" placeholder="Enter your email" formControlName="email">
             <div>
-              <small *ngIf="email.touched && email.invalid" class="red text">*Enter email</small>
+              <small >*Enter email</small>
             </div>
-            <span>{{email}}</span>
 
           </div>
           <!-- Input box for password -->
           <div class="input-box">
             <span class="details">Password   </span>
-            <input type="text" placeholder="Enter your password" name="pswd" [(ngModel)]="user.pswd" required #pswd="ngModel">
+            <input type="text" placeholder="Enter your password" formControlName="pswd">
             <div>
-              <small *ngIf="pswd.touched && pswd.invalid" class="red text">*Enter password</small>
+              <small  class="red text">*Enter password</small>
             </div>
           </div>
           <!-- Input box for confirming password -->
           <div class="input-box">
             <span class="details">Confirm Password   </span>
-            <input type="text" placeholder="Confirm your password" name="confirmpswd" ngModel>
+            <input type="text" placeholder="Confirm your password" formControlName="confirmpswd">
           </div>
           <!-- Input box for date of birth -->
           <div class="input-box">
-            <span class="details">Date of birth   </span>
-            <input type="date" name="dob" name="dob" ngModel required>
+            <span class="details">Date of birth</span>
+            <input type="date" name="dob" formControlName="dob">
           </div>
         </div>
         <!-- Button container -->
